finished initial implementation of all the map reduce steps